Fix docs site form inline wrapping in navbar in IE

--- a/docs-assets/scss/docs.scss
+++ b/docs-assets/scss/docs.scss
@@ -272,7 +272,7 @@
 // CSS to limit `.form-control` width in `.navbar` examples
 
 .bd-example .navbar .form-control {
-  max-width: 10rem;
+  width: 10rem;
 }
 
 // Docsearch
